Fixed a background color. Forgot a var() wrap around the variable.

--- a/src/App.sass
+++ b/src/App.sass
@@ -12,7 +12,7 @@
 body 
     font-size: var(--defaultFontSize)
     color: var(--secondaryColor)
-    background-color: --primaryColor
+    background-color: var(--primaryColor)
 
 header 
     text-align: center
